dev release - bugfixes.
small negative times are expected,
  http://perldoc.perl.org/Benchmark.html#CAVEATS
  http://matrix.cpantesters.org/?dist=Test-Unit 0.25;reports=1;os=netbsd;perl=5.10.0

for perl-5.14: do not assume stringified form of a regex,
  http://rt.perl.org/rt3//Public/Bug/Display.html?id=78008
    generic bug for this issue on CPAN;
  https://rt.cpan.org/Public/Bug/Display.html?id=62771
    this bug on T:U

test+fix TestRunner.pl exit code,
  https://sourceforge.net/tracker/?func=detail&aid=3304750&group_id=2653&atid=102653
  (de-CVS %skip)
  tack EXITCODE onto the output if not success
  simplest exit($ok ? 0 : 1) in TestRunner.pl

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,17 @@
+2011-06-08  Matthew Astley  <mca1001@users.sourceforge.net>
+
+	Small bugfixes & Global IPv6 day.  dev0.25_13nn
+
+	* t/try_examples.t: accept small negative CPU time.
+
+	* t/try_examples.t, TestRunner.pl: test+fix exit code.
+
+	* t/tlib/AssertTest.pm: don't assume qr/foo/ stringifies
+	as (?-xism:foo) .  In Perl 5.14 it doesn't.
+
 2011-06-07  Matthew Astley  <mca1001@users.sourceforge.net>
 
-	Dev release: a few old changes, for proof of new 'make tardist'
+	A few old changes, for proof of new 'make tardist'.  dev0.25_0922
 
 	* Makefile.PL, inc/*, dist-tools/*: use version info from Git.
 	Fix the lack of version numbers in modules.
