--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,27 @@
+2011-06-27  Matthew Astley  <mca1001@users.sourceforge.net>
+
+	* lib/Test/Unit/UnitHarness.pm, t/try_examples.t: avoid $^X
+
+	* lib/Test/Unit/Debug.pm, all its callers: Clarification of
+	use (intended to be internal), pointers elsewhere, fixes; accept
+	debug($coderef) to postpone slow text generators.
+
+	Fixes https://rt.cpan.org/Ticket/Display.html?id=6758 (thanks
+	aa29).
+
+	Deprecated T:U:Debug::{,no_}debug_pkgs importable subroutines.
+
+2011-06-15  Matthew Astley  <mca1001@users.sourceforge.net>
+
+	* Makefile.PL: Improved META.yml; warnings.
+
+2011-06-09  Matthew Astley  <mca1001@users.sourceforge.net>
+
+	* lib/Test/Unit/UnitHarness.pm, t/try_examples.t: avoid $^X
+
 2011-06-08  Matthew Astley  <mca1001@users.sourceforge.net>
 
-	Small bugfixes & Global IPv6 day.  dev0.25_13nn
+	Small bugfixes & Global IPv6 day.  dev0.25_1325
 
 	* t/try_examples.t: accept small negative CPU time.
 
